// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute trueusd endpoint should return error when ripcord true 1`] = `
{
  "errorMessage": "Ripcord indicator true. Details: Integrations, Balances",
  "ripcord": true,
  "ripcordDetails": "Integrations, Balances",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1686848387538,
  },
}
`;

exports[`execute trueusd endpoint should return success for token 1`] = `
{
  "data": {
    "result": 3097573780.109635,
    "ripcord": false,
  },
  "result": 3097573780.109635,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1686848387538,
  },
}
`;

exports[`execute trueusd endpoint should return success trust 1`] = `
{
  "data": {
    "result": 3117410009.89,
    "ripcord": false,
  },
  "result": 3117410009.89,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1686848387538,
  },
}
`;

exports[`execute trueusd endpoint should return success when given a chain 1`] = `
{
  "data": {
    "result": 24268.83,
    "ripcord": false,
  },
  "result": 24268.83,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1686848387538,
  },
}
`;

exports[`execute trueusd endpoint should return success when given a chain and field 1`] = `
{
  "data": {
    "result": 3005274.95,
    "ripcord": false,
  },
  "result": 3005274.95,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1686848387538,
  },
}
`;
